[tool.poetry]
name = "cloet"
version = "0.1.1"
description = "A command line tool for using EPA ChemSTEER models"
authors = ["kaphillips <phillips.katherine@epa.gov>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
